--- a/instruqt-artifacts/track.yml
+++ b/instruqt-artifacts/track.yml
@@ -27,4 +27,7 @@ lab_config:
   overlay: false
   width: 25
   position: right
-checksum: "527598695971929176"
+  feedback_recap_enabled: true
+  loadingMessages: true
+  hideStopButton: false
+checksum: "6161000942667308558"
